<resources>
    <string name="app_name">Repetit</string>
    <string name="hello_world">hello world</string>
    <string name="imgColors">edit colors</string>
    <string name="txtColors2">colors</string>
    <string name="off">off</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="question">Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="msgShowDocumentProvider">Show document provider</string>
    <string name="msgRememberChoice">remember choice</string>
    <string name="msgDontShowThisMessageAgain">don\'t show this message again</string>
    <string name="msgNoPersistableUriPermissionCouldBeTaken">no persistable uri permission could be taken</string>
    <string name="PrivacyPolicy">privacy policy</string>
    <string name="item_first_level">item first level</string>
    <string name="item_second_level">item second level</string>
    <string name="tree_node">Tree Node</string>
    <string name="collapse_all">Collapse All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="show_selections">Show Selections</string>
    <string name="find_sympt">find symptoms</string>
    <string name="qry_med">query medikaments</string>
    <string name="msg_find_title">Find</string>
    <string name="msg_find_symptoms">enter substring for symptoms to find</string>
    <string name="btnSearch">search</string>
    <string name="show_sympt">symptoms</string>
    <string name="show_med">medicaments</string>
    <string name="search_meds">search medicaments</string>
    <string name="search_sympts">search symptoms</string>
    <string name="search_medsadd">search medicaments add</string>
    <string name="search_medsand">search medicaments and</string>
    <string name="search_symptsand">search symptoms and</string>
    <string name="search_symptsor">search symptoms or</string>
    <string name="search_medsor">search medicaments or</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="search_whole_word">search whole word</string>
    <string name="weight_prompt">x</string>
    <string name="mnuContact">Contact</string>
    <string name="mnuCredits">Credits</string>
    <string name="mnuPrivacyPolicy">privacy policy</string>
    <string name="Contact">please contact me if you have any questions</string>
    <string name="SendMail">send mail</string>
    <string name="license">license</string>
    <string name="licenseaccept">I accept the license</string>
    <string name="PrivacyPolicyAccept">I accept the privacy policy</string>
    <string name="mnuHelp">help</string>
    <string name="alreadysearched">There is already a search displayed! Do you want to delete the search?</string>
    <string name="continuesearch">continue</string>
    <string name="repertorising">repertorising</string>
    <string name="startingRep">starting repertorising</string>
    <string name="firstsymptom">first symptom</string>
    <string name="processingquery">starting repertorising</string>
    <string name="startingquery">starting query</string>
    <string name="Help">Help</string>
    <string name="DatabaseError">The database could not be created!</string>
    <string name="database">database</string>
    <string name="DatabaseErrorOlderVersions">Database Error. In older android versions the database must be copied manually!</string>
    <string name="showAll">show all</string>
    <string name="Search">search</string>
    <string name="save_result">save result</string>
    <string name="save">save</string>
    <string name="name">name</string>
    <string name="delete">delete</string>
    <string name="deletesave">Do you really want to delete the saved data for %1$s ?</string>
    <string name="nameexists">The name %1$s exists!</string>
    <string name="open">open</string>
    <string name="rename">rename</string>
    <string name="results">results</string>
    <string name="rename_result">rename result</string>
    <string name="gotolast">goto last error</string>
    <string name="deleteerrors">delete all errors</string>
    <string name="export">export errors</string>
    <string name="closeerrors">goto medicaments</string>
    <string name="DisclaimerAccept">accept disclaimer</string>
    <string name="switch_db">switch database</string>
    <string name="openfile">open database</string>
    <string name="clearselection">If you make a new search all selections are lost!</string>
    <string name="clear">clear selections</string>
    <string name="search_reset">reset</string>
    <string name="addTerm">terms</string>
    <string name="term">term</string>
    <string name="meaning">meaning</string>
    <string name="btnAdd">add</string>
    <string name="getMeanings">get meainings</string>
    <string name="search_terms">search terms</string>
    <string name="DeleteMeaning">delete meaning</string>
    <string name="btnDeleteTerm">delete term</string>
    <string name="btnClose">close</string>
    <string name="WideOrNarrow">Do you want to make ad wide Search\n(more results, takes longer)\nor a narrow search?</string>
    <string name="narrow">narrow</string>
    <string name="search">search</string>
    <string name="wide">wide</string>
    <string name="noData">No data!</string>
    <string name="noDataReceived">No data received!</string>
    <string name="databaseloaded">The database was loaded</string>
    <string name="filecantbeopended">The file can\'t be opened!</string>
    <string name="filenotwritable">The file is not writable!</string>
    <string name="FileNotFound">File %s  not found!</string>
    <string name="finish">Beenden?</string>
    <string name="translate">translate</string>
    <string name="searchgoogle">Google Suche</string>
    <string name="websearchnotfound">Web Suche nicht gefunden!</string>
    <string-array name="spnWeight">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
    </string-array>
</resources>
