<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llTerms"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText
        android:id="@+id/txtTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/term"
        android:text="@string/term"
        tools:text="@string/term" />

    <EditText
        android:id="@+id/txtMeaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/meaning"
        android:text="@string/meaning"
        tools:text="@string/meaning" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="110px"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="15px"
            android:layout_gravity="center_vertical"
            android:text="@string/btnAdd" />

        <Button
            android:id="@+id/btnDeleteTerm"
            android:layout_width="110px"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="15px"
            android:layout_gravity="center_vertical"
            android:text="@string/btnDeleteTerm" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="110px"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="15px"
            android:layout_gravity="center_vertical"
            android:text="@string/btnClose" />


    </LinearLayout>

    <ListView
        android:id="@+id/lstMeanings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>